Add image resources and implement drawing area for clock gadget
- Added PNG images for hours, minutes, and seconds to the project.
- Created an XML resource file to manage image resources.
- Implemented the MyArea class for drawing the clock images using Cairo and Gdk.
- Updated meson.build to compile the new resource files.
- Enhanced error handling for image loading in MyArea constructor.

--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,9 @@
 project('gadget_clock', ['cpp', 'c'],
           version: '0.1.0',
     meson_version: '>= 1.0.0',
-  default_options: [ 'warning_level=2', 'werror=false', 'cpp_std=gnu++2a', ],
+  default_options: [ 'warning_level=2', 'werror=false', 'cpp_std=c++17', ],
 )
 
-
+subdir('data')
 subdir('src')
 
