--- a/src/meson.build
+++ b/src/meson.build
@@ -1,5 +1,6 @@
 gadget_clock_sources = [
   'clock.cpp',
+  'clockarea.cpp',
   'main.cpp',
 ]
 
@@ -13,6 +14,7 @@ gadget_clock_deps = [
 ]
 
 executable('gadget_clock', gadget_clock_sources,
+images_gresource,
   dependencies: gadget_clock_deps,
   install: true,
 )
