--- a/data/meson.build
+++ b/data/meson.build
@@ -5,3 +5,10 @@ images_gresource = gnome.compile_resources(
     source_dir: 'images',
     c_name: 'as1'
 )
+
+styles_gresource = gnome.compile_resources(
+    'gresource_styles',
+    'styles/styles.gresource.xml',
+    source_dir: 'styles',
+    c_name: 'as2'
+)
