--- a/src/meson.build
+++ b/src/meson.build
@@ -6,14 +6,9 @@ gadget_clock_sources = [
 
 gadget_clock_deps = [
 	dependency('gtkmm-4.0'),
-	# dependency('gtksourceviewmm-3.0'),
-	# dependency('zlib'),
-	# dependency('fontconfig'),
-	# dependency('gdk-x11-3.0', required : false),
-	# dependency('jsoncpp')
 ]
 
-executable('gadget_clock', gadget_clock_sources,
+executable('com.github.stsdc.gadget_clock', gadget_clock_sources,
 images_gresource,
 styles_gresource,
   dependencies: gadget_clock_deps,
