--- a/data/gadget_clock.metainfo.xml.in
+++ b/data/gadget_clock.metainfo.xml.in
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright 2017-2023 Danielle Foré <danielle@elementary.io> -->
 <component type="desktop-application">
-  <id>io.github.stsdc.gadget_clock</id>
-  <launchable type="desktop-id">io.github.stsdc.gadget_clock.desktop</launchable>
-  <translation type="gettext">io.github.stsdc.gadget_clock</translation>
+  <id>com.github.stsdc.gadget_clock</id>
+  <launchable type="desktop-id">com.github.stsdc.gadget_clock.desktop</launchable>
+  <translation type="gettext">com.github.stsdc.gadget_clock</translation>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
 
