--- a/data/gadget_clock.metainfo.xml.in
+++ b/data/gadget_clock.metainfo.xml.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2017-2023 Danielle Foré <danielle@elementary.io> -->
+<!-- Copyright 2025 @stsdc -->
 <component type="desktop-application">
   <id>com.github.stsdc.gadget_clock</id>
   <launchable type="desktop-id">com.github.stsdc.gadget_clock.desktop</launchable>
@@ -15,15 +15,15 @@
 
   <screenshots>
     <screenshot type="default">
-      <image>https://raw.githubusercontent.com/stsdc/gadget_clock/0.0.1/data/screenshot.png</image>
+      <image>https://raw.githubusercontent.com/stsdc/gadget_clock/0.0.3/data/screenshot.png</image>
     </screenshot>
   </screenshots>
 
   <branding>
-    <color type="primary">#e9f4fc</color>
+    <color type="primary">#000000</color>
   </branding>
   <custom>
-    <value key="x-appcenter-color-primary">#e9f4fc</value>
+    <value key="x-appcenter-color-primary">#000000</value>
   </custom>
 
   <content_rating type="oars-1.1">
@@ -45,7 +45,7 @@
   <update_contact>@stsdc</update_contact>
 
   <releases>
-    <release version="0.1.0" date="2025-06-12" urgency="medium">
+    <release version="0.3.0" date="2025-06-14" urgency="medium">
       <description>
         <p>This is an initial release!</p>
         <ul>
