--- a/src/meson.build
+++ b/src/meson.build
@@ -8,7 +8,7 @@ gadget_clock_deps = [
 	dependency('gtkmm-4.0'),
 ]
 
-executable('com.github.stsdc.gadget_clock', gadget_clock_sources,
+executable('io.github.stsdc.gadget_clock', gadget_clock_sources,
 images_gresource,
 styles_gresource,
   dependencies: gadget_clock_deps,
