--- a/data/gadget_clock.metainfo.xml.in
+++ b/data/gadget_clock.metainfo.xml.in
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright 2025 @stsdc -->
 <component type="desktop-application">
-  <id>com.github.stsdc.gadget_clock</id>
-  <launchable type="desktop-id">com.github.stsdc.gadget_clock.desktop</launchable>
-  <translation type="gettext">com.github.stsdc.gadget_clock</translation>
+  <id>io.github.stsdc.gadget_clock</id>
+  <launchable type="desktop-id">io.github.stsdc.gadget_clock.desktop</launchable>
+  <translation type="gettext">io.github.stsdc.gadget_clock</translation>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
 
   <name>Clock Gadget</name>
   <summary>A nice clock for your desktop</summary>
   <description>
-    A small analog clock, that will decorate your desktop.
+    <p>A small analog clock, that will decorate your desktop.</p>
   </description>
 
   <screenshots>
@@ -26,20 +26,17 @@
     <value key="x-appcenter-color-primary">#000000</value>
   </custom>
 
-  <content_rating type="oars-1.1">
-    <content_attribute id="social-info">mild</content_attribute>
-  </content_rating>
+  <content_rating type="oars-1.1"/>
 
   <provides>
-    <binary>com.github.stsdc.gadget_clock</binary>
+    <binary>io.github.stsdc.gadget_clock</binary>
   </provides>
 
   <url type="homepage">https://github.com/stsdc/gadget_clock/</url>
   <url type="bugtracker">https://github.com/stsdc/gadget_clock/issues</url>
-  <url type="donation"/>
   <url type="help">https://github.com/stsdc/gadget_clock/discussions</url>
 
-  <developer id="com.github.stsdc">
+  <developer id="io.github.stsdc">
     <name>Stanisław</name>
   </developer>
   <update_contact>@stsdc</update_contact>
