--- a/data/meson.build
+++ b/data/meson.build
@@ -32,7 +32,7 @@ endforeach
 i18n.merge_file(
     input: 'gadget_clock.desktop.in',
     output: meson.project_name() + '.desktop',
-    po_dir: join_paths(meson.source_root(), 'po', 'extra'),
+    po_dir: join_paths(meson.project_source_root(), 'po', 'extra'),
     type: 'desktop',
     install: true,
     install_dir: get_option('datadir') / 'applications'
@@ -41,7 +41,7 @@ i18n.merge_file(
 i18n.merge_file(
     input: 'gadget_clock.metainfo.xml.in',
     output: meson.project_name() + '.metainfo.xml',
-    po_dir: meson.source_root() / 'po' / 'extra',
+    po_dir: meson.project_source_root() / 'po' / 'extra',
     type: 'xml',
     install: true,
     install_dir: get_option('datadir') / 'metainfo',
