--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('com.github.stsdc.gadget_clock', ['cpp', 'c'],
+project('io.github.stsdc.gadget_clock', ['cpp', 'c'],
           version: '0.3.0',
     meson_version: '>= 1.0.0',
   default_options: [ 'warning_level=2', 'werror=false', 'cpp_std=c++17', ],
