--- a/data/gadget_clock.metainfo.xml.in
+++ b/data/gadget_clock.metainfo.xml.in
@@ -15,7 +15,7 @@
 
   <screenshots>
     <screenshot type="default">
-      <image>https://raw.githubusercontent.com/stsdc/gadget_clock/0.5.0/data/screenshot.png</image>
+      <image>https://raw.githubusercontent.com/stsdc/gadget_clock/0.5.1/data/screenshot.png</image>
     </screenshot>
   </screenshots>
 
@@ -42,6 +42,11 @@
   <update_contact>@stsdc</update_contact>
 
   <releases>
+    <release version="0.5.1" date="2025-06-23" urgency="medium">
+      <description>
+        <p>Fix desktop file category.</p>
+      </description>
+    </release>
     <release version="0.5.0" date="2025-06-22" urgency="medium">
       <description>
         <p>Fix dependency compilation.</p>
