--- a/.github/workflows/flatpak-x-checker.yml
+++ b/.github/workflows/flatpak-x-checker.yml
@@ -19,4 +19,4 @@ jobs:
           GIT_COMMITTER_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          args: --update --never-fork dev.stsdc.gadget_clock.json
+          args: --update --never-fork io.github.stsdc.gadget_clock.json
